--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -3,7 +3,7 @@
 
 <html>
     <head>
-        <title>Web Service programming blog</title>
+        <title>Eric's blog</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -14,7 +14,7 @@
             {% if user.is_authenticated %} 
                 <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a> 
             {% endif %}
-            <h1><a href="/">Web Service programming blog</a></h1>
+            <h1><a href="/">Eric's blog</a></h1>
         </div>
             
         <div class="content container">
